# sik-screenworms

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
client_src/: client.cpp  client.h  client_config.cpp  client_config.h  main.cc  main.cpp
common/: crc32.cpp  crc32.h  fingerprint.cpp  fingerprint.h  getopt_wrapper.cpp  interval_timer.cpp  interval_timer.h  messages.cpp  messages.h  misc.cpp  misc.h  rng.h  sockets.cpp  sockets.h  time_utils.cpp  time_utils.h  udp_socket.cpp  udp_socket.h
polecenie/: additional_requirements.txt  makefile.txt  protocol_client_gui.txt  protocol_client_server.txt  zasady_architektura_overview.txt
server_src/: game.cpp  game.h  main.cc  main.cpp  server.cpp  server.h  server_config.cpp  server_config.h
tests/: tests.cpp
utils/: fingerprint.cpp  getopt_wrapper.cpp  getopt_wrapper.h  interval_timer.cpp  interval_timer.h  misc.cpp  misc.h  udp_socket.cpp  udp_socket.h  utils.cpp  utils.h
